# theblokc-solana-bootcamp

./: .gitignore  01-create-mint.ts  01-upload-asset.ts  02-create-token-account.ts  02-upload-metadata.ts  03-create-nft.ts  03-mint-token.ts  Anchor.toml  README.md  metaplex.ts  package-lock.json  package.json  read-solana.ts  save-data-to-blockchain.ts  use-the-deployed-rust-program.ts  write-solana.ts
app/: package-lock.json  package.json
app/src/: App.js  solana_certification_project.json
programs/solana_certification_project/: Cargo.toml
programs/solana_certification_project/src/: lib.rs
tests/: solana_certification_project.ts
